# DroneDeliverySitl

./: .gitignore  README.md  ROS 无人机自主送货控制节点开发大纲 (Delivery Mission Node).md
drone_delivery/: CMakeLists.txt  package.xml  setup.py
drone_delivery/config/: waypoints.yaml
drone_delivery/launch/: delivery_mission.launch
drone_delivery/src/drone_delivery/: __init__.py  delivery_mission_node.py
